--- a/index.scss
+++ b/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&display=swap");
+@import "./variables.scss";
 
 * {
   color: inherit;
@@ -26,20 +27,6 @@ hr {
 img {
   max-width: 100%;
 }
-
-// variables
-$primary: #326dee;
-$secondary: #1ac888;
-$error: #d32752;
-$info: #f6c31c;
-
-// spacing
-$base-padding: 0.75rem;
-$base-margin: 0.75rem;
-
-// borders
-$base-border-thickness: 1px;
-$base-border-radius: 20px;
 
 h1 {
   color: $primary;
